--- a/client/src/Posts/Post.module.css
+++ b/client/src/Posts/Post.module.css
@@ -5,6 +5,7 @@
   border: solid 1px black;
   background-color: white;
   padding: 30px 5px;
+  padding-bottom: 100px;
 }
 
 .username {
@@ -32,4 +33,26 @@
 
 .text {
   font-size: 16px;
+}
+
+.action {
+  position: absolute;
+  right: 2%;
+  bottom: 2%;
+  width: 220px;
+}
+
+.edit {
+  height: 50px;
+  margin-right: 10px;
+  width: 100px;
+  font-size: 24px;
+}
+
+.delete {
+  color: red;
+  height: 50px;
+  margin-right: 10px;
+  width: 100px;
+  font-size: 24px;
 }
